--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
  </div>
  
- <div data-role="page" id="page2" data-theme="a">
+ <div data-role="page" id="page2" data-add-back-btn="true" data-theme="a">
          <div data-role="header">
       <h1>Dispositivo</h1>
       </div>
@@ -70,7 +70,7 @@
             </div>
             </div>
             
-            <div data-role="page" id="page3" data-theme="a">
+            <div data-role="page" id="page3" data-add-back-btn="true" data-theme="a">
             <div data-role="header">
             <h1>Eventos</h1>
             </div>
